# cool-tunnel-server

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Disclaimer.md  GETTING_STARTED.md  LICENSE  LTSC-HENG-LICENSE-DRAFT.md  LTSC.md  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  STRUCTURE.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  VERSIONING.md  biome.json  ct  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json
.github/workflows/: audit.yml  ci.yml  client-runtime-release.yml  operator-release.yml  release-client-runtime.yml  release-image-bundle.yml  release-operator.yml  release.yml  tag-version.yml
apps/api/: package.json
apps/web/: middleware.ts  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
caddy/: Caddyfile.tpl
caddy/sites-fallback/: index.html
core/: Cargo.toml  audit.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
core/.sqlx/: query-473872678a9c0e9283317434b804b139c18e52f240f86e1fc2353f936a10315b.json  query-4a9215de5f89ee2241ca6c3112c67eb572d7294791f8675594684c1999e8c132.json  query-7b53854bdc4fd339a4946898388a59507628f60ecb386e14410d9dc0f8df53f6.json  query-9c0e03f626555fa6394332fa8fa3f55ea886c9c291e2b58cd9a56b5bac835669.json  query-a39255af95023d3f1a0a837b1e24d6b97d91ce9c550c57004139de26d1183cf0.json  query-a5fe19040db0068c81b552c8c7cedf337c9fd059e9c9525c14147b58e716b608.json  query-c60d91e226aa1e2895180b535095c665d15e1780ebbcdd99ecd700312c27054f.json  query-c6b5f09c043fdf0377d2c7ed9f6aa285d5af05529048d19e22b47434f7066c64.json  query-cee1ad4f7e6cbaaeb5e8d82f3bda643b867cc0d153c7a7f73a043fca8c61bacc.json  query-e2a22f67c5f7b7118e4b75214236522c0789568b263aedb6f217623f35a86124.json
core/ct-protocol/: Cargo.toml  README.md
core/ct-protocol/src/: components.rs  lib.rs  profile.rs  subscription.rs  wire.rs
core/ct-server-core/: Cargo.toml  README.md
core/ct-server-core/src/: admin.rs  canary.rs  components.rs  contracts.rs  credentials.rs  daemon.rs  daemon_fsm.rs  db.rs  err.rs  frame.rs  internal_metrics.rs  laravel_crypt.rs  main.rs  metrics.rs  observability.rs  probe.rs  quota.rs  redis_bridge.rs  subscription.rs  template.rs
core/ct-server-core/src/caddy/: mod.rs
core/ct-server-core/src/caddyfile/: mod.rs
core/ct-server-core/src/domain/: mod.rs
core/ct-server-core/src/haproxy/: mod.rs
core/ct-server-core/src/naive/: mod.rs
core/ct-server-core/src/singbox/: mod.rs
core/ct-server-core/src/util/: debounce.rs  doh.rs  domain.rs  mod.rs
docker/admin-api/: Dockerfile
docker/admin-web/: Dockerfile
docker/caddy/: Dockerfile
docker/core/: Dockerfile  prebuilt.Dockerfile  release-asset.Dockerfile
docker/haproxy/: Dockerfile
docker/naive/: Dockerfile  naive.upstream.json  supervisor.ts
docker/panel/: Caddyfile  Dockerfile  entrypoint.sh  nginx.conf  opcache.ini  php-hardening.ini  supervisord.conf
docker/sing-box/: Dockerfile
docker/singbox/: Dockerfile
docker/singbox-core/: prebuilt.Dockerfile
docs/: ai-unit-test-generation.md  architectural-decisions-2026.md  architecture.md  components.md  cross-platform-clients.md  daemon-fsm.md  glossary.md  going-to-china.md  installation-debian.md  observability-dashboard.md  operations.md  operator-runbook.md  operator.md  release-stress-test.md  restrictive-networks.md  sqlx-offline.md  test-vps.md
docs/design/: sni-router-v0.1.md
docs/prompts/: audit-advanced.md  auto-converge.md  release-check.md
haproxy/: haproxy.cfg.tpl
manifests/: README.md  admin-api.upstream.json  admin-web.upstream.json  caddy.upstream.json  client-runtime.upstream.json  credential-lock.upstream.json  ct-protocol.upstream.json  ct-server-core.upstream.json  doh-resolver.upstream.json  forwardproxy.upstream.json  haproxy.upstream.json  mariadb.upstream.json  naive.upstream.json  naiveproxy-client.upstream.json  naiveproxy.upstream.json  panel.upstream.json  redis.upstream.json  release-assets.json  sing-box.upstream.json
operator/: .gitignore  README.md  auto-update.ts  backup.ts  build.ts  drift.ts  help.ts  install.ts  package.json  pin-images.ts  restore.ts  sbom.ts  sqlx-prepare.ts  sync-naive-pin.ts  tsconfig.json  update.ts  verify-sot.ts  verify-supervisord.ts  wire-probe.ts
operator/src/: index.ts
operator/tests/: admin-auth.test.ts  admin.test.ts  auto-diag.test.ts  auto-update.test.ts  backup.test.ts  bootstrap-admin.test.ts  bridge.test.ts  component-check.test.ts  compose.test.ts  credential-control.test.ts  credential-sync.test.ts  crypto.test.ts  deployment-files.test.ts  disk-cleanup.test.ts  docs-commands.test.ts  doctor.test.ts  drift-check.test.ts  env-migrate.test.ts  env.test.ts  help.test.ts  laravel-key.test.ts  missing-tls-cert.test.ts  op-lock.test.ts  pin-images.test.ts  preflight.test.ts  prompt.test.ts  readiness.test.ts  reality-clock.test.ts  recover.test.ts  redact.test.ts  render.test.ts  repo-root.test.ts  restore.test.ts  sbom.test.ts  sh.test.ts  sot.test.ts  sync-naive-pin.test.ts  term.test.ts  test-paths.ts  update.test.ts  (+4 more)
panel/: .env.example  composer.json  phpstan.neon  phpunit.xml
panel/bootstrap/: app.php  providers.php
panel/config/: app.php  auth.php  broadcasting.php  cache.php  concurrency.php  cool-tunnel.php  cors.php  database.php  filesystems.php  hashing.php  logging.php  mail.php  octane.php  (+4 more)
scripts/: auto_sync.sh  auto_update.sh  backup.sh  bootstrap.sh  build_release_core_assets.sh  build_release_image_bundle.sh  build_release_singbox_core_assets.sh  check-utf8.sh  doctor.sh  fetch_core_binary.sh  fetch_image_bundle.sh  fetch_operator_binary.sh  fetch_singbox_core_binary.sh  fix.sh  generate-openapi.ts  help.sh  install.sh  late-night-comeback.sh  lib.sh  pin-images.sh  render-caddyfile.sh  render-haproxy.sh  render-singbox.sh  restore.sh  sbom.sh  sqlx-prepare.sh  update.sh  verify-client-runtime-manifest.sh  verify_sot.sh  verify_sot_vps.sh  verify_supervisord.sh
sing-box/: config.json.tpl
singbox-core/: README.md  package.json  singbox.upstream.json  tsconfig.json
(+311 files in other folders)
