# Workspace root for the Cool Tunnel Server Rust code.
#
# The shape of this workspace is deliberate — `ct-protocol` is the
# cross-platform shared crate that every Rust client (current macOS,
# future iOS / Android / Windows / Linux desktop) can depend on. The
# server is the canonical source of the wire format, and any new
# client just adds `ct-protocol` to its Cargo.toml to interoperate.
# Clients fetch a matching version of this crate from the server's
# published release tag via Cargo.lock.
#
#  core/
#   └── ct-protocol/        Pure-Rust shared types, no async, no I/O.
#                           What every client links against.

[workspace]
resolver = "2"
members = [
    "ct-protocol",
]

[workspace.package]
version       = "0.5.6"
edition       = "2021"
# Pinned to 1.88 to match core/rust-toolchain.toml::channel and the
# toolchain clients use when they fetch and build this crate.
rust-version  = "1.88"
# GNU Affero General Public License v3.0 ONLY — copyleft with the
# network-source-disclosure clause (§ 13). Anyone running modified
# Cool Tunnel Server source as a network service (e.g. a paid proxy)
# MUST distribute their modifications under AGPL-3.0-only. Pinned to
# "-only" (not "-or-later") so a future GPL revision can't be forced
# on derivatives without coolwhite LLC's review. AGPL-3.0-only IS in
# SPDX, so the expression is honored directly — no `license-file`
# workaround needed. cargo-deny still skips workspace crates via
# [licenses.private] ignore = true since `publish = false`.
license       = "AGPL-3.0-only"
repository    = "https://github.com/coo1white/cool-tunnel-server"
authors       = ["coolwhite LLC"]
publish       = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic     = { level = "warn",  priority = -1 }
unwrap_used  = "deny"
expect_used  = "deny"
panic        = "deny"
todo         = "deny"
unimplemented = "deny"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
