[package]
name        = "ct-server-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace   = true
authors.workspace      = true
publish.workspace      = true
description = "Latency-sensitive engine for the Cool Tunnel Server admin panel — sing-box config rendering, clash-API hot-reload, metrics scraping, quota enforcement, anti-tracking probe, Redis revocation bridge. PolyForm Noncommercial 1.0.0; see ../../LICENSE. Commercial use requires a separate license."
readme      = "README.md"

[[bin]]
name = "ct-server-core"
path = "src/main.rs"

[dependencies]
ct-protocol = { path = "../ct-protocol" }

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.38", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
# Pre-2026-05-05 this block also pinned `hyper`, `hyper-util`,
# `hyperlocal`, `http-body-util`, `bytes`, and `hmac`. None of those
# are used anywhere in the binary anymore (the unix-domain admin
# path was retired when sing-box's clash API moved to TCP); keeping
# them dragged ~30 transitive crates into every release build,
# raised peak compile-time RAM, and made install.sh OOM on a 1 GB
# VPS without swap. Removed in the low-mem-server pass — see
# err.rs for the matching From-impl deletions. Restoring any of
# them is a deliberate two-place edit (Cargo.toml + err.rs).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Redis revocation bridge — long-lived pub/sub from the daemon.
# Listens on cool_tunnel:revocations; on any message, re-renders
# Caddyfile and reloads via admin socket.
redis = { version = "0.25", default-features = false, features = ["tokio-comp", "aio", "connection-manager"] }
futures-core = "0.3"

# Laravel-compatible AES-256-GCM decryption for the
# proxy_accounts.password_cleartext_encrypted column.
aes-gcm = "0.10"
base64  = "0.22"

chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2       = "0.10"
hex        = "0.4"

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
