[package]
name        = "ct-server-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish.workspace      = true
description = "Internal Rust engine for Cool Tunnel Server protocol/runtime rendering. AGPL-3.0-only; see ../../LICENSE. Copyright (C) 2026 coolwhite LLC."
readme      = "README.md"

[[bin]]
name = "ct-server-core"
path = "src/main.rs"

[dependencies]
ct-protocol = { path = "../ct-protocol" }

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.38", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
# Pre-2026-05-05 this block also pinned `hyper`, `hyper-util`,
# `hyperlocal`, `http-body-util`, `bytes`, and `hmac`. The HTTP stack
# remains intentionally absent after the low-mem-server pass; `bytes`
# bytes is now reintroduced as a small direct dependency for bounded
# `BytesMut` network-frame buffers in daemon request handling.
futures-core = "0.3"

# Retained AES-256-GCM helper dependency for legacy compatibility paths.
aes-gcm = "0.10"
base64  = "0.22"

chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2       = "0.10"
hex        = "0.4"

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
